--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,30 @@
     font-family: Outfit
 }
 
+body {
+    background-color: #111;
+    display: grid;
+    place-items: center;
+    height: 100vh;
+}
+
+.custom-button {
+    border: 2px dashed #9370DB;
+    border-radius: 50px;   
+    background-color: transparent;
+    color: white;              
+    font-family: sans-serif;   
+    font-size: 1.1rem;            
+    padding: 10px 50px;    
+    cursor: pointer;           
+    transition: all 0.3s ease; 
+}
+
+.custom-button:hover {
+    border-style: solid;
+    background-color: rgba(147, 112, 219, 0.1); 
+}
+
 a.active hr{
     display: block;
 }
@@ -22,3 +46,4 @@ a.active hr{
   ::-webkit-scrollbar{
     display: none;
   }
+  
